# otomasyon-

./: .env.example  .gitignore  README.md  app.py  generate_video.py  pyproject.toml  requirements.txt  run_demo.py  run_panel.py
animation/: __init__.py  factory.py  higgsfield_service.py  models.py  prompts.py  provider.py  runway_provider.py  scene_pipeline.py
app/: __init__.py
data/: topics.json
docs/: stage3-panel.md
memory/: characters.json  inventory.json  locations.json  relationships.json  timeline.json  world.json
scripts/: design_leo_voices.py  generate_demo_video.py  generate_multivoice_test.py  generate_story.py  generate_voice_candidates.py  produce_first_episode.py  resume_first_episode.py  test_runway_video.py
src/: character_design.py  config.py  memory.py  models.py  pipeline.py  scene_planner.py  thumbnail.py  video.py  youtube_upload.py
tests/: test_animation.py  test_audio_mixing_stage2.py  test_database.py  test_demo_video_pipeline_stage2.py  test_final_render_stage2.py  test_generated_audio_providers.py  test_higgsfield_cli.py  test_local_motion_provider.py  test_local_tts_provider.py  test_mock_story_provider.py  test_pipeline.py  test_placeholder_image_provider.py  test_presentation_quality_stage2.py  test_quality_inspector_stage2.py  test_runway_provider.py  test_scene_automation.py  test_stage2_1080_integration.py  test_stage2_config.py  test_stage2_database.py  test_story_pipeline_stage1.py  test_story_schema.py  test_subtitles_stage2.py  test_video_provider_architecture.py  test_web_actions_regeneration.py  test_web_app.py  (+3 more)
(+144 files in other folders)
